updatead comment box

--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -40,7 +40,7 @@
             <form id="post-form">
                 <div class="input-section">
                     <label for="comment">Comment</label>
-                    <input type="text" name="comment" id="comment">
+                    <textarea name="comment" id="comment"></textarea>
                 </div>
                 <div class="input-section">
                     <label for="author">Author</label>
