fake submit button

--- a/templates/create-cluster.html
+++ b/templates/create-cluster.html
@@ -34,6 +34,8 @@
                     <p><input type="file" name="file"></p>
                     <p><input type="submit" value="Submit"></p>
                 </form>
+
+                    <a href="/verify-data/" class="btn">Fake-Submit!</a>
             </div>
             </div>
 
