--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -160,6 +160,25 @@ nav ul li:active {
     color: #fff !important;
 }
 
+.fakebtn {
+    text-decoration: none;
+    transition: .2s ease-out;
+    margin: 50px;
+    display: inline-block;
+    padding: 6px 103px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    white-space: normal !important;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    background: rgb(134, 3, 3);
+    color: #fff !important;
+}
+
 
 
 
