--- a/templates/verify-data.html
+++ b/templates/verify-data.html
@@ -21,6 +21,8 @@
             </ul>
          </nav>
 
+        <div class="cardoptions">
+        <div class="card2">
         <subheader>
             <h1 class="desktop">Data Frame<b>.Preview </b></h1>
          </subheader>
@@ -29,10 +31,13 @@
            <img src={{ url_for('static', filename='mytable.png') }}>
         </div>
 
-        <h4 class="Instruction">If this is a sample of the data you wish to edit proceed below! <br /> Otherwise retry to upload at New Cluster above.>
+        <h4 class="Instruction">If this is a sample of the data you wish to edit proceed below! <br /> Otherwise retry to upload at New Cluster above.<h4>
 
+        <div class="hcenter">
         <a href="#" class="btn2">Proceed to Clustering Data</a>
-
+        </div>
+        </div>
+        </div>
 
     </body>
 </html>
