--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -73,13 +73,25 @@ nav ul li:active {
 }
 .card {
     width: 300px;
-    height: 450px;
+    height: auto;
     margin: 0px 20px 20px 0px;
     display: inline-block;
     vertical-align: top;
     border: solid 1px #CCC;
     align-items: center;
 }
+
+.card2 {
+    width: auto;
+    height: 463px;
+    margin: 0px 20px 20px 0px;
+    display: inline-block;
+    vertical-align: top;
+    border: solid 1px #CCC;
+    align-items: center;
+}
+
+
 .cardoptions {
     padding: 10px;
     display: flex;
@@ -144,7 +156,7 @@ nav ul li:active {
 .btn2 {
     text-decoration: none;
     transition: .2s ease-out;
-    margin: 25px;
+    margin: 0px 20px 20px 0px;
     display: inline-block;
     padding: 6px 103px;
     margin-bottom: 0;
@@ -164,6 +176,39 @@ nav ul li:active {
     text-decoration: none;
     transition: .2s ease-out;
     margin: 50px;
+    display: inline-block;
+    padding: 6px 103px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    white-space: normal !important;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    background: rgb(134, 3, 3);
+    color: #fff !important;
+}
+
+.hcenter {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+::-webkit-file-upload-button {
+  background: rgb(134, 3, 3);
+  color: white;
+}
+
+
+.submitbtn {
+  text-decoration: none;
+    transition: .2s ease-out;
+    margin: 6px;
     display: inline-block;
     padding: 6px 103px;
     margin-bottom: 0;
