--- a/templates/create-cluster.html
+++ b/templates/create-cluster.html
@@ -32,15 +32,17 @@
                 </p>
                 <form method="POST" action="" enctype="multipart/form-data">
                     <p><input type="file" name="file"></p>
-                    <p><input type="submit" value="Submit"></p>
+                    <p><input type="submit" class="submitbtn" value="Submit"></p>
                 </form>
 
-                    <a href="/verify-data/" class="btn">Fake-Submit!</a>
             </div>
             </div>
 
         </div>
 
+        <div class="hcenter">
+        <a href="/verify-data/" class="btn2">Fake-Submit!</a>
+        </div>
 
         <script src="nav.js" type="text/javascript"></script>
     </body>
