--- a/templates/create-cluster.html
+++ b/templates/create-cluster.html
@@ -31,6 +31,10 @@
                     visualize!
                 </p>
                 <form method="POST" action="" enctype="multipart/form-data">
+                    <div class="input-section">
+                    <label for="name">Name your workspace. </br></label>
+                    <input type="text" name="wspace" id="workspace">
+                    </div>
                     <p><input type="file" name="file"></p>
                     <p><input type="submit" class="submitbtn" value="Submit"></p>
                 </form>
